chore(admins): updating admins, teachers and students