@@ -9,11 +9,11 @@ import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.stream.Collectors;
 
 @Getter
 @EqualsAndHashCode
 public class UserDetailsImpl implements UserDetails {
+
     private final String username;
     @JsonIgnore
     private final String password;
@@ -23,22 +23,27 @@ public class UserDetailsImpl implements UserDetails {
     private final boolean enabled;
     private final Collection<? extends GrantedAuthority> authorities;
 
-    public UserDetailsImpl(String username, String password, Collection<? extends GrantedAuthority> authorities) {
+    public UserDetailsImpl(
+            String username,
+            String password,
+            Collection<? extends GrantedAuthority> authorities
+    ) {
         this.username = username;
         this.password = password;
-        this.authorities = authorities;
         this.accountNonExpired = true;
         this.accountNonLocked = true;
         this.credentialsNonExpired = true;
         this.enabled = true;
+        this.authorities = authorities;
     }
 
     public static UserDetailsImpl build(User user) {
         var authorities = user.getRoles().stream()
                 .map(role -> role.getName().name())
                 .map(SimpleGrantedAuthority::new)
-                .collect(Collectors.toList());
+                .toList();
         return new UserDetailsImpl(user.getUsername(), user.getPassword(), authorities);
     }
 
 }
+
